--- a/requirements.txt
+++ b/requirements.txt
@@ -1,291 +1,16 @@
-absl-py==0.8.1
-altgraph==0.17
-aniso8601==8.0.0
-appdirs==1.4.3
-asgiref==3.2.7
-astor==0.8.1
-atomicwrites==1.4.0
-attrdict==2.0.1
-attrs==19.3.0
-audioread==2.1.8
-auto-py-to-exe==2.6.6
-autobahn==20.1.2
-Automat==0.8.0
-backcall==0.1.0
-base58==1.0.3
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-bitfinex-v2==1.7.1
-bleach==3.1.4
-blis==0.4.1
-boto3==1.15.4
-botocore==1.18.4
-bottle==0.12.18
-bottle-websocket==0.2.9
-cached-property==1.5.1
-cachetools==4.0.0
-cefpython3==66.0
-certifi==2019.11.28
-cffi==1.13.2
-chardet==3.0.4
-Click==7.0
-cloudpickle==1.2.2
-colorama==0.4.3
-colorlog==4.1.0
-colormap==1.0.3
-constantly==15.1.0
-cryptography==2.8
-cycler==0.10.0
-cymem==2.0.3
-Cython==0.29.21
-dateparser==0.7.2
-DateTime==4.3
-decorator==4.4.1
-defusedxml==0.6.0
-dill==0.3.1.1
-distro==1.5.0
-Django==3.0.5
-docker==4.2.2
-docker-compose==1.26.2
-dockerpty==0.4.1
-docopt==0.6.2
-easydev==0.9.38
-Eel==0.12.3
-entrypoints==0.3
-et-xmlfile==1.0.1
-eth-account==0.4.0
-eth-keyfile==0.5.1
-eth-keys==0.2.4
-eth-rlp==0.1.2
-extract-zip==1.0.0
-fix-yahoo-finance==0.1.37
-Flask==1.1.1
-Flask-Jsonpify==1.5.0
-Flask-RESTful==0.3.8
-future==0.18.2
-gast==0.2.2
-geocoder==1.38.1
-gevent==20.4.0
-gevent-websocket==0.10.1
-google==2.0.3
-google-api-core==1.16.0
-google-auth==1.10.0
-google-auth-oauthlib==0.4.1
-google-cloud-core==1.2.0
-google-cloud-speech==1.3.1
-google-cloud-storage==1.25.0
-google-pasta==0.1.8
-google-resumable-media==0.5.0
-googleapis-common-protos==1.51.0
-greenlet==0.4.15
-grpcio==1.25.0
-gym==0.15.4
-h5py==2.10.0
-httpretty==0.9.7
-hyperlink==19.0.0
-idna==2.5
-importlib-metadata==1.3.0
-incremental==17.5.0
-inflect==3.0.2
-inflection==0.3.1
-ipfshttpclient==0.4.12
-ipykernel==5.2.1
-ipython==7.13.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+boto3==1.15.13
+botocore==1.18.13
+click==7.1.2
+Flask==1.1.2
 itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.17.0
-Jinja2==2.10.3
+Jinja2==2.11.2
 jmespath==0.10.0
-joblib==0.14.1
-jsonify==0.5
-jsonpatch==1.24
-jsonpointer==2.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-core==4.6.3
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-kiwisolver==1.1.0
-librosa==0.7.1
-llvmlite==0.30.0
-lru-dict==1.1.6
-lxml==4.4.2
-Markdown==3.1.1
 MarkupSafe==1.1.1
-mathparse==0.1.2
-matplotlib==3.1.2
-mistune==0.8.4
-more-itertools==8.0.2
-mpl-finance==0.10.1
-mplfinance==0.12.3a2
-multiaddr==0.0.8
-multiprocess==0.70.9
-multitasking==0.0.9
-murmurhash==1.0.2
-mysql-connector==2.2.9
-nbconvert==5.6.1
-nbformat==5.0.6
-netaddr==0.7.19
-netifaces==0.10.9
-newsapi==0.1.1
-newsapi-python==0.2.3
-nltk==3.4.5
-notebook==6.0.3
-numba==0.46.0
-numpy==1.17.4
-oauthlib==3.1.0
-openai==0.2.4
-opencv-python==4.1.2.30
-openpyxl==3.0.3
-opt-einsum==3.1.0
-os-sys==2.1.4
-os-sys-php==2019.10.13
-packaging==20.3
-pandas==0.25.1
-pandas-datareader==0.8.1
-pandocfilters==1.4.2
-paramiko==2.7.1
-parso==0.7.0
-patsy==0.5.1
-pbkdf2==1.3
-pefile==2019.4.18
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==6.2.1
-Pint==0.11
-plac==0.9.6
-plotly==4.8.1
-pluggy==0.13.1
-preshed==3.0.2
-progress==1.5
-progressbar==2.5
-prometheus-client==0.7.1
-prompt-toolkit==3.0.5
-protobuf==3.11.1
-psutil==5.7.0
-ptyprocess==0.6.0
-py==1.8.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pybase64==1.0.1
-pycparser==2.19
-pydub==0.23.1
-pyfinance==1.2.7
-pyglet==1.3.2
-Pygments==2.6.1
-pygubu==0.9.8.6
-PyHamcrest==2.0.0
-PyInstaller==3.6
-PyNaCl==1.4.0
-pynput==1.6.8
-pyOpenSSL==19.1.0
-pyparsing==2.4.5
-pypiwin32==223
-PyQt5==5.13.2
-PyQt5-sip==12.7.0
-pyrsistent==0.16.0
-pyspeedtest==1.2.7
-pytest==5.4.1
-python-binance==0.7.4
-python-dateutil==2.7.5
-python-dotenv==0.14.0
-python-git==2018.2.1
-python-http-client==3.3.1
-pythonGUI==0.0.2
-pytz==2019.3
-pyvalid==0.9.2
-pywin32==227
-pywin32-ctypes==0.2.0
-pywinpty==0.5.7
-PyYAML==5.1.2
-pyzmq==18.1.1
-qtconsole==4.7.3
-QtPy==1.9.0
-Quandl==3.5.0
-ratelim==0.1.6
-regex==2020.1.8
-report==0.0.1
-reports==0.3.1
-requests==2.23.0
-requests-download==0.1.2
-requests-oauthlib==1.3.0
-resampy==0.2.2
-retrying==1.3.3
-rlp==1.1.0
-rsa==4.0
+numpy==1.19.2
+pandas==1.1.3
+python-dateutil==2.8.1
+pytz==2020.1
 s3transfer==0.3.3
-scikit-learn==0.22
-scipy==1.3.3
-seaborn==0.10.0
-selenium==3.141.0
-Send2Trash==1.5.0
-sendgrid==6.4.6
-service-identity==18.1.0
-simpy==4.0.1
-simpy.io==0.2.3
-six==1.13.0
-sklearn==0.0
-sounddevice==0.3.14
-SoundFile==0.10.3.post1
-soupsieve==1.9.5
-spacy==2.2.0
-SpeechRecognition==3.8.1
-SQLAlchemy==1.3.16
-sqlparse==0.3.1
-srsly==1.0.2
-starkbank-ecdsa==1.0.0
-statsmodels==0.11.0
-tensorboard==2.0.2
-tensorflow==2.0.0
-tensorflow-estimator==2.0.1
-tensorflow-gpu==1.14.0
-termcolor==1.1.0
-terminado==0.8.3
-testpath==0.4.4
-text-editor==1.0.5
-textblob==0.15.3
-texttable==1.6.2
-thinc==7.1.1
-tinydb==3.15.2
-torch==1.3.1
-torchfile==0.1.0
-torchvision==0.4.2
-tornado==6.0.3
-tqdm==4.40.2
-traitlets==4.3.3
-tuspy==0.2.4
-Twisted==19.10.0
-txaio==20.1.1
-tzlocal==2.0.0
-umap-learn==0.3.10
-Unidecode==1.1.1
-urllib3==1.21.1
-varint==1.0.2
-virtualenv==16.7.9
-virtualenvwrapper-win==1.2.5
-visdom==0.1.8.9
-wasabi==0.6.0
-wcwidth==0.1.9
-web3==5.2.2
-webencodings==0.5.1
-webrtcvad==2.0.10
-websocket-client==0.56.0
-Werkzeug==0.16.0
-whichcraft==0.6.1
-widgetsnbextension==3.5.1
-wifi==0.3.8
-wikipedia==1.4.0
-WMI==1.5.1
-wordcloud==1.6.0
-wrapt==1.11.2
-xgboost==0.90
-xlrd==1.2.0
-xmltodict==0.12.0
-yfinance==0.1.54
-zipp==0.6.0
-zope.interface==4.7.1
+six==1.15.0
+urllib3==1.25.10
+Werkzeug==1.0.1
