--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ s3transfer==0.3.3
 six==1.15.0
 urllib3==1.25.10
 Werkzeug==1.0.1
+img2pdf==0.4.0
+lxml==4.5.2
+pikepdf==1.19.3
+Pillow==7.2.0
+
+
+
