--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,10 @@ img2pdf==0.4.0
 lxml==4.5.2
 pikepdf==1.19.3
 Pillow==7.2.0
+cffi==1.14.3
+cryptography==3.1.1
+pycparser==2.20
+six==1.15.0
 
 
 
